<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EditObservationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="Edit Observation"
            android:textSize="33dp"
            android:textColor="#000"
            android:fontFamily="@font/cassadia" />

        <TextView
            style="@style/titleText"
            android:text="@string/name_observation" />

        <EditText
            android:id="@+id/editObName"
            style="@style/inputStyle"
            android:hint="I saw somethings"
            android:textAlignment="textStart" />

        <TextView
            style="@style/titleText"
            android:text="@string/time_observation" />

        <TextView
            android:id="@+id/obTimeEdit"
            style="@style/inputStyle"
            android:layout_width="76dp"
            android:hint="00:00"
            android:textAlignment="textStart" />

        <TextView
            style="@style/titleText"
            android:text="@string/date_observation" />

        <TextView
            android:id="@+id/obDateEdit"
            style="@style/inputStyle"
            android:layout_width="158dp"
            android:hint="dd/MM/yyyy"
            android:textAlignment="textStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="5dp"
            android:gravity="center">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/weather">

                <AutoCompleteTextView
                    android:id="@+id/weatherLevelEdit"
                    style="@style/titleText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <TextView
            style="@style/titleText"
            android:text="Comments" />

        <MultiAutoCompleteTextView
            android:id="@+id/editObComment"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/edit_text_border"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:padding="10dp"
            android:fontFamily="@font/bahnschrift"
            android:textColor="@color/black"
            android:hint="@string/comment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editObButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/colorbutton"
            android:fontFamily="@font/cassadia"
            android:text="EDIT"
            android:textSize="20dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/backObservationFragment"
        android:layout_width="47dp"
        android:layout_height="80dp"
        android:src="@drawable/icon_back" />

</FrameLayout>